--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Julians/Desktop/java/eclipse/APIs/bukkit-1.2.5-R3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Julians/Desktop/java/eclipse/APIs/spoutpluginapi-dev-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Julians/Desktop/java/eclipse/APIs/bukkit-1.3.1-R0.1-20120806.163109-13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
