--- a/config.yml
+++ b/config.yml
@@ -5,25 +5,40 @@
 # chained another and %chained for the name of   #
 # the player who got chained.                    #
 # You can use the normal mc colorcodes to use    #
-# colors in the messages                         #
+# colors in the messages  for spout less then    #
+# 26 chars.                                      #
 #                                                #
 
 chainItem: '287'
 chainCostsItem: true
 chainCostsItemAmount: 1
+chainTimer: false
+timer: 3
+chainSound: http://www.oocities.org/holdaysbyerin2002/Halloween/Wavs/SoundEffects/chain.wav
 disabledCommandsWhileChained:
 - /tp
 - /kill
+cantFindPlayerMessage: '&3Cant find Player'
+playerAlreadyChainedMessage: '&3Player already chained.'
+playerNotChainedMessage: '&3This player is not chained.'
+timeOverInMessage: '&3Minutes left: %time'
 chainedByMessage: '&3You were chained by &4%chainer&3!'
 chainedMessage: '&3You chained &4%chained&3!'
-chainedOverTime: '&3You were chained by &4%chainer&3 over &4%time&3 minutes!'
-chainedVictimOverTime: '&3You chained &4%chained&3 over &4%time&3 minutes!'
-moveWhileChainedMessage: '&3You are unable to move while chained!'
-dropWhileChainedMessage: '&3You are unable to drop items while chained!'
-interactWhileChainedMessage: '&3You are unable to build while chained!'
-attackWhileChainedMessage: '&3You are unable to attack while chained!'
-shootWhileChainedMessage: '&3You are unable to shoot while chained!'
+chainedOverTimeMessage: '&3You were chained by &4%chainer&3 over &4%time&3 minutes!'
+chainedVictimOverTimeMessage: '&3You chained &4%chained&3 over &4%time&3 minutes!'
+chainingMessage: '&3Chaining ... &4%timer'
+getChainedMessage: '&3You get chained ... &4%timer'
+timeOverMessage: '&3You are unchained because the time is over!'
+moveWhileChainedMessage: '&3You cant move!'
+dropWhileChainedMessage: '&3You cant drop!'
+interactWhileChainedMessage: '&3You cant build!'
+attackWhileChainedMessage: '&3You cant attack!'
+shootWhileChainedMessage: '&3You cant shoot!'
 unchainedChainedMessage: '&4%chained &3have been unchained!'
 unchainedChainerMessage: '&3You have been unchained!'
 disabledCommand: '&3You are not allowed to use the Command &4%command &3while chained.'
 disabledCommands: '&3You are not allowed to use the Command &4%command &3while chained.'
+newVersionMessage: '&3There is a new version of chaintrain available: %newV'
+checkVersion: true
+autoDetectSpout: true
+useSpout: false
